# turbomono

./: .env.info  README.md  Taskfile.yaml
modules_js/: README.md  package.json  pnpm-lock.yaml
modules_py/: .gitignore  README.md  pyproject.toml
modules_py/apps/core/: pyproject.toml
modules_py/apps/core/src/core/: __init__.py
modules_py/scripts/: this.py
modules_py/tests/scripts/: test_this.py
