[project]
name = "monorepo"
version = "0.0.0"
description = "Example of monorepo setup using UV"
authors = [
    { name = "David Muhr", email = "muhrdavid+github@gmail.com" }
]
requires-python = "<3.13"
readme = "README.md"
dependencies = []

[tool.uv.sources]
utils = { workspace = true }
core = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*", "apps/*"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
    "ruff>=0.9.6",
    "black>=25.1.0",
    "pyright>=1.1.394",
    # These are added as dev dependencies becuase they should be available
    #  when developing the project.
    "utils",
    "core",
]
package = false

[tool.pyright]
include = ["apps", "packages", "scripts", "tests"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.ruff]
include = ["apps/**", "packages/**", "scripts/**", "tests/**"]
extend-exclude = [
    "__pycache__",
    "docs",
    "site",
    ".tmp"
]

[tool.pytest.ini_options]
pythonpath = [".", "scripts"]
